--- a/app/views/admin/course/_index.html.erb
+++ b/app/views/admin/course/_index.html.erb
@@ -6,8 +6,8 @@
 <%= render partial: 'registration', layout: 'modal_card', locals: { title: 'Schedule registration', subtitle: 'Allow students to register for the following schedules' } %>
 <% end %>
 
-<% if @all_sections.any? %>
-<%= render partial: 'pages', layout: 'modal_card', locals: { title: 'Published pages', subtitle: 'Check all the pages that should be visible to students and guests' } %>
+<% if @schedule_spans.any? %>
+<%= render partial: 'pages', layout: 'modal_card', locals: { title: 'Published modules', subtitle: 'Check all the modules that should be visible to students and guests' } %>
 <% end %>
 
 <%= render partial: 'export', layout: 'modal_card', locals: { title: 'Export results', subtitle: 'Download student results from all schedules for archival' }%>
