--- a/app/views/hands/hands/index.html.erb
+++ b/app/views/hands/hands/index.html.erb
@@ -1,4 +1,4 @@
-<% if not @my_hands.any? || @hands.any? || @long_time_users.any? %>
+<% if not @my_hands.any? || @hands.any? || (Settings.hands_show_non_questions && @long_time_users.any?) %>
 <h5 class="text-center my-5">No requests. Go and find<br> a student to talk to! ❤️</h5>
 <% end %>
 
