--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -129,5 +129,5 @@
 	<% end %>
 	<% Course.links.each do |title, url|  %>
 		<div style="flex:1 0 0; min-width:0"><%= link_to insert_icon(title).html_safe, url, class:"d-block w-100 w-100 text-center text-truncate p-1 rounded", target: url =~ /^http/i ? '_blank' : '' %></div>
-	<% end %>
+	<% end if logged_in? %>
 </div>
