--- a/app/views/overviews/_tabs.html.erb
+++ b/app/views/overviews/_tabs.html.erb
@@ -9,7 +9,7 @@
 		</button>
 		<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 			<% @accessible_schedules.each do |schedule| %>
-			<%= link_to schedule.name, schedule, class: "dropdown-item" + class_if(schedule == @selected_schedule, "active") %> 
+			<%= link_to schedule.name, schedule_overview_path(schedule), class: "dropdown-item" + class_if(schedule == @selected_schedule, "active") %> 
 			<% end %>
 		</div>
 	</div>
@@ -32,21 +32,21 @@
 			<div class="dropdown-menu dropdown-menu-right" aria-labelledby="btnGroupDrop1">
 				<% if current_user.senior? %>
 				<%= link_to 'Publish what\'s done'.html_safe, publish_finished_schedule_grades_path(schedule_slug: @selected_schedule), method: 'post', data: { confirm:'Are you sure?' }, class:"dropdown-item" %>
-				<%= link_to 'Publish auto grades...'.html_safe, form_for_publish_auto_schedule_grades_path(schedule_id: @current_module_id), class:"dropdown-item" %>
+				<%= link_to 'Publish auto grades...'.html_safe, form_for_publish_auto_schedule_grades_path(schedule_slug: @selected_schedule), class:"dropdown-item" %>
 				<% end %>
 				<% if current_user.admin? %>
-				<%= link_to 'Publish my grades, even if not done'.html_safe, publish_my_schedule_grades_path(schedule_id: @current_module_id), method: 'post', data: { confirm:'Are you sure?' }, class:"dropdown-item"  %>
-				<%= link_to 'Publish everything that\'s a valid grade'.html_safe, publish_all_schedule_grades_path(schedule_id: @current_module_id), method: 'post', data: { confirm:'DANGEROUS, this even publishes stuff that is not done. Are you sure?' }, class:"dropdown-item"  %>
+				<%= link_to 'Publish my grades, even if not done'.html_safe, publish_my_schedule_grades_path(schedule_slug: @selected_schedule), method: 'post', data: { confirm:'Are you sure?' }, class:"dropdown-item"  %>
+				<%= link_to 'Publish everything that\'s a valid grade'.html_safe, publish_all_schedule_grades_path(schedule_slug: @selected_schedule), method: 'post', data: { confirm:'DANGEROUS, this even publishes stuff that is not done. Are you sure?' }, class:"dropdown-item"  %>
 				<% if Schedule.any? %>
 				<div class="dropdown-divider"></div>
-				<%= link_to 'Notify students who did not submit yet'.html_safe, form_for_missing_schedule_submits_path(schedule_id: @current_module_id), class:"dropdown-item", remote: true  %>
+				<%= link_to 'Notify students who did not submit yet'.html_safe, form_for_missing_schedule_submits_path(schedule_slug: @selected_schedule), class:"dropdown-item", remote: true  %>
 				<% end %>
 				<% end %>
 				<% if current_user.admin? && Grading::FinalGradeAssigner.available? %>
 				<div class="dropdown-divider"></div>
-				<%= link_to 'Calculate all final grades', assign_all_final_schedule_grades_path(schedule_id: @current_module_id), method: :put, data: { confirm:'Are you sure?' }, class:"dropdown-item"  %>
+				<%= link_to 'Calculate all final grades', assign_all_final_schedule_grades_path(schedule_slug: @selected_schedule), method: :put, data: { confirm:'Are you sure?' }, class:"dropdown-item"  %>
 				<% Grading.final_grade_names.each do |grade_name| %>
-				<%= link_to "Calculate final grades of type #{grade_name.humanize}", assign_all_final_schedule_grades_path(schedule_id: @current_module_id, grades: grade_name), method: :put, data: { confirm:'Are you sure?' }, class:"dropdown-item"  %>
+				<%= link_to "Calculate final grades of type #{grade_name.humanize}", assign_all_final_schedule_grades_path(schedule_slug: @selected_schedule, grades: grade_name), method: :put, data: { confirm:'Are you sure?' }, class:"dropdown-item"  %>
 				<% end %>
 				<% end %>
 			</div>
@@ -59,8 +59,8 @@
 			</button>
 
 			<ul class="dropdown-menu dropdown-menu-right">
-				<%= link_to 'Import Groups'.html_safe, new_schedule_import_groups_path(schedule_slug: params[:schedule_slug]), remote:true, class:"dropdown-item" %>
-				<%= link_to 'Generate Groups'.html_safe, new_schedule_generate_groups_path(schedule_slug: params[:schedule_slug]), remote:true, class:"dropdown-item" %>
+				<%= link_to 'Import Groups'.html_safe, new_schedule_import_groups_path(schedule_slug: params[:slug]), remote:true, class:"dropdown-item" %>
+				<%= link_to 'Generate Groups'.html_safe, new_schedule_generate_groups_path(schedule_slug: params[:slug]), remote:true, class:"dropdown-item" %>
 			</ul>
 		</div>
 		<% end %>
