--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -128,6 +128,6 @@
 		<div style="flex:1 0 0; min-width:0"><a href="/syllabus" class="d-block w-100 text-center text-truncate p-1 rounded"><%= bootstrap_icon 'calendar' %><br><small><%= t(:syllabus) %></small></a></div>
 	<% end %>
 	<% Course.links.each do |title, url|  %>
-		<div style="flex:1 0 0; min-width:0"><%= link_to insert_icon(title).html_safe, url, class:"d-block w-100 w-100 text-center text-truncate p-1 rounded", target: url =~ /^http/i ? '_blank' : '' %></div>
+		<div style="flex:1 0 0; min-width:0"><%= link_to insert_icon(title).html_safe, url, class:"d-block w-100 w-100 text-center text-truncate p-1 rounded", target: url =~ /^http/i ? '_blank' : nil %></div>
 	<% end if logged_in? %>
 </div>
