various jquery -> vanilla conversions and optimizations

--- a/app/views/application/_float_nav.html.erb
+++ b/app/views/application/_float_nav.html.erb
@@ -26,12 +26,18 @@
 
 <% if is_local_ip? && current_user.student? && current_user.last_known_location.blank? %>
 <script>
-	$.ajax('<%= hands_raise_path %>');
+	Rails.ajax({
+		url: '<%= hands_raise_path %>',
+		type: 'get'
+	});
 </script>
 <% else %>
 <script>
 	$('#ama-nav').one('show.bs.dropdown', function(e) {
-		$.ajax('<%= hands_raise_path %>');
+		Rails.ajax({
+			url: '<%= hands_raise_path %>',
+			type: 'get'
+		});
 	})
 </script>
 <% end %>
