--- a/app/views/application/_modal_browser.html.erb
+++ b/app/views/application/_modal_browser.html.erb
@@ -19,7 +19,7 @@
 <script>
 	$('#modal-browser').on('show.bs.modal', function (e) {
 		// clear modal upon load
-		$('#modal-browser-title').html('');
-		$('#modal-browser-body').html('<div class="spinner-grow" style="width: 3rem; height: 3rem;" role="status"><span class="sr-only">Loading...</span></div>');
+		document.getElementById('modal-browser-header').innerHTML = '';
+		document.getElementById('modal-browser-body').innerHTML = '<div class="spinner-grow" style="width: 3rem; height: 3rem;" role="status"><span class="sr-only">Loading...</span></div>';
 	})
 </script>
