--- a/app/views/grades/_form.html.erb
+++ b/app/views/grades/_form.html.erb
@@ -70,8 +70,8 @@
 		<div class="input-group">
 			<%= f.text_field :grade, class: 'form-control form-control-sm', value: @grade.grade %>
 			<span class="input-group-append">
-				<button class="btn btn-light btn-sm" type="button" id="pass-btn"><small>PASS</small></button>
-				<button class="btn btn-light btn-sm" type="button" id="fail-btn"><small>FAIL</small></button>
+				<button class="btn btn-primary btn-sm" type="button" id="pass-btn"><small>PASS</small></button>
+				<button class="btn btn-primary btn-sm" type="button" id="fail-btn"><small>FAIL</small></button>
 			</span>
 		</div>
 	</div>
