allow grading via the submit model

--- a/app/views/grading/show.html.erb
+++ b/app/views/grading/show.html.erb
@@ -21,7 +21,7 @@
 	<%= render partial: 'grading_info' %>
 
 	<div id="grade" class="d-flex flex-column" style="min-height:100%">
-		<%= render @grade %>
+		<%= render @submit %>
 	</div>
 	
 	<% cache @grades do %>
