--- a/app/views/layouts/grading.html.erb
+++ b/app/views/layouts/grading.html.erb
@@ -15,6 +15,8 @@
 	<%= javascript_include_tag "application" %>
 
 	<link rel="icon" type="image/png" href="/images/minor.png" />
+	
+	<meta name="turbolinks-cache-control" content="no-cache">
 </head>
 
 <body style="height:100vh">
