--- a/app/views/grading/show.html.erb
+++ b/app/views/grading/show.html.erb
@@ -50,7 +50,7 @@
 
 <div class="col-7" style="overflow-y:scroll; min-height:0; border-left:1px solid #eee; max-height:100%">
 	
-	<% if @files.present? || @submit.has_auto_feedback? %>
+	<% if @files.present? || @submit.has_form_response? || @submit.has_auto_feedback? %>
 	<ul class="nav nav-tabs" id="files" role="tablist">
 		<%= render partial: 'file_tabs', locals: { first: true } %>
 	</ul>
