--- a/app/assets/stylesheets/includes/navigation.scss
+++ b/app/assets/stylesheets/includes/navigation.scss
@@ -28,8 +28,7 @@
 
 .sidebar-scroller
 {
-	overflow-y: scroll;
-//	border-top:1px solid #ccc;
+	overflow-y: auto;
 	padding-top:0.5rem;
 	padding-bottom:1rem;
 }
