--- a/app/views/grading/_file_tabs.html.erb
+++ b/app/views/grading/_file_tabs.html.erb
@@ -5,7 +5,7 @@
 <% end %>
 <% @files.each_key do |filename| %>
 <li class="nav-item">
-	<a class="nav-link <%= (first = false) || 'active' if first %>" id="home-tab" data-toggle="tab" href="#file-<%= filename.parameterize %>" role="tab"><%= filename %></a>
+	<a class="nav-link <%= (first = false) || 'active' if first %>" id="home-tab" data-toggle="tab" href="#file-<%= filename.parameterize %>" role="tab"><%= filename.html_safe %></a>
 </li>
 <% end if @files.present? %>
 <% if @submit.has_auto_feedback? %>
