--- a/app/views/items/_submit.html.erb
+++ b/app/views/items/_submit.html.erb
@@ -4,15 +4,13 @@
 <% if submit.url %>
 URL: <%= link_to submit.url, submit.url %>
 <% end %>
-<% if submit.submitted_files %>
-<p>
-	Files submitted:
-	<ul>
-		<% submit.submitted_files.each do |name| %>
-		<li><code class="<%= color_for_filename(name, submit.pset.all_filenames) %>"><%= name %></code></li>
-		<% end %>
-	</ul>
-</p>
+<% if submit.submitted_files && submit.submitted_files.any? %>
+<p class="mb-1"><%= t "files_submitted" %></p>
+<ul class="pl-4">
+	<% submit.submitted_files.each do |name| %>
+	<li><code class="text-body"><%= name %></code></li>
+	<% end %>
+</ul>
 <% end %>
 <% if submit.has_auto_feedback? %>
 <%= link_to t("check_results"), profile_feedback_path(submit), class:"btn btn-secondary", remote: true %>
