--- a/app/views/overviews/_table.html.erb
+++ b/app/views/overviews/_table.html.erb
@@ -19,7 +19,7 @@
 	<tr><td colspan="20"><%= group ? "#{group.name} (#{user_list.size})" : "Groupless" %></td></tr>
 
 	<% user_list.each do |user| %>
-	<% cache user do %>
+	<% cache [user, :head_overview] do %>
 	<tr <%= 'class=table-warning' if user.stagnated? %>>
 		<td>
 			<%= link_to user.name, user, remote: true, data: { toggle: "modal", target: "#modal-browser" } %>
