--- a/app/views/application/_float_nav.html.erb
+++ b/app/views/application/_float_nav.html.erb
@@ -1,6 +1,6 @@
-<ul id="icon-nav" class="navbar-nav navbar-collapse ml-auto">
+<ul id="icon-nav" class="navbar-nav align-items-center ml-auto">
 	<% if current_user.senior? %>
-	<div class="w-100">
+	<div>
 		<%= render partial: 'search' %>
 	</div>
 	<% end %>
