--- a/app/views/layouts/schedules.html.erb
+++ b/app/views/layouts/schedules.html.erb
@@ -21,7 +21,7 @@
 
 	<div class="d-flex flex-column h-100">
 
-		<div id="navbar" class="navbar bg-dark navbar-dark navbar-expand-lg flex-shrink-0">
+		<div id="navbar" class="navbar bg-dark navbar-expand-lg flex-shrink-0 py-2 pl-2 pr-3">
 			<%= render 'brand' %>
 			
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="sidebar-content" aria-expanded="false" aria-label="Toggle navigation">
