--- a/app/views/grading/_file_panels.html.erb
+++ b/app/views/grading/_file_panels.html.erb
@@ -11,7 +11,7 @@
 	<%= link_to 'd', grading_download_path(grading_submit_id: @submit.id, filename: filename), remote: false, class: 'float-right' %>
 	<% filetype = CodeRay::FileType.fetch(filename, :text) %>
 	<% if filetype == :text %>
-	<%= simple_format(contents) %>
+	<%= simple_format(contents.encode("UTF-8", undef: :replace, replace: '?')) %>
 	<% else %>
 	<%= CodeRay.scan(contents, filetype).div(:line_numbers => :inline).html_safe %>
 	<% end %>
