--- a/app/views/submits/_form.html.erb
+++ b/app/views/submits/_form.html.erb
@@ -88,21 +88,29 @@
 	<% end %>
 
 	<div class="form-group d-flex mt-auto">
-		<% if current_user.admin? || @grade.unfinished? %>
-		<%= grade_form.submit 'Save', class: 'btn btn-primary flex-fill' %>
-		<% end %>
-		<% if current_user.admin? %>
-		<%= link_to "Destroy Grade", grade_path(id: @grade.id, referer: request.referer), method: :delete, data: { confirm: "Sure? This deletes the grade completely, including internal info." }, class: 'btn btn-secondary btn-sm ml-1' if @grade.persisted? %>
-		<%= link_to "Destroy Submit", submit_path(id: @submit.id, referer: request.referer), method: :delete, data: { confirm: "Sure? This removes proof of student submitting. If you want to delete the grade, just empty text field and save the grade." }, class: 'btn btn-secondary btn-sm ml-1' if @submit %>
-		<% end %>
-		<% if current_user.admin? && @submit.checkable? %>
-		<%= link_to "Re-check", recheck_submit_path(id: @submit.id), method: :post, data: { confirm: "Sure?" }, class: 'btn btn-secondary btn-sm ml-1' if @submit %>
-		<% end %>
-		<% if current_user.senior? %>
-		<% if @grade.persisted? %>
-		<%= link_to "Publish", grade_path(id: @grade.id, grade: { status: :published }), method: :put, data: { confirm: "Sure?" }, class: 'btn btn-secondary btn-sm ml-1' %>
-		<% end%>
-		<% end %>
+		<div class="btn-group w-100">
+			<% if current_user.admin? || @grade.unfinished? %>
+			<%= form.submit 'Save', class: 'btn btn-primary flex-fill' %>
+			<% end %>
+
+			<button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				Admin<span class="sr-only">Toggle Actions Dropdown</span>
+			</button>
+			<div class="dropdown-menu">
+				<% if current_user.admin? %>
+				<%= link_to "Destroy Grade", grade_path(id: @grade.id, referer: request.referer), method: :delete, data: { confirm: "Sure? This deletes the grade completely, including internal info." }, class: 'dropdown-item' if @grade.persisted? %>
+				<%= link_to "Destroy Submit", submit_path(id: @submit.id, referer: request.referer), method: :delete, data: { confirm: "Sure? This removes proof of student submitting. If you want to delete the grade, just empty text field and save the grade." }, class: 'dropdown-item' if @submit %>
+				<% end %>
+				<% if current_user.admin? && @submit.checkable? %>
+				<%= link_to "Re-check", recheck_submit_path(id: @submit.id), method: :post, data: { confirm: "Sure?" }, class: 'dropdown-item' if @submit %>
+				<% end %>
+				<% if current_user.senior? %>
+				<% if @grade.persisted? %>
+				<%= link_to "Publish", grade_path(id: @grade.id, grade: { status: :published }), method: :put, data: { confirm: "Sure?" }, class: 'dropdown-item' %>
+				<% end%>
+				<% end %>
+			</div>
+		</div>
 	</div>
 
 <% end %>
