--- a/app/views/layouts/boxes.html.erb
+++ b/app/views/layouts/boxes.html.erb
@@ -53,7 +53,7 @@
 		</div>
 	</div>
 
-	<%= render partial: "modal_browser" if current_user.senior? %>
+	<%= render partial: "modal_browser" %>
 </body>
 
 <% if !current_user.valid_profile? %>
