--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -1,23 +1,15 @@
-<div class="">
-<% 
-	subs = @student.submits.includes(:grade).group_by(&:pset_id)
-%>
+<div>
+	<% 
+		subs = @student.submits.includes(:grade).group_by(&:pset_id)
+	%>
 
-<% @psets.each do |pset| %>
-<%= grade_button(@student, pset, subs)%>
-<% end %>
+	<% @psets.each do |pset| %>
+	<%= grade_button(@student, pset, subs)%>
+	<% end %>
 </div>
 
-<%= line_chart [
-{
-	name: "total",
-	data: @student.attendance_records.group_by_day(:cutoff, format: "%a %d-%m").count
-}
-# {
-# 	name: "local",
-# 	data: @student.attendance_records.where(local: true).group_by_day(:cutoff, format: "%a %d-%m").count
-# }
-], height: "150px", stacked: true %>
+<div id="chart-1" style="height: 150px;"></div>
+<% @js = "new Chartkick.ColumnChart('chart-1', #{JSON(@student.attendance_records.group_by_day(:cutoff, format: "%a %d-%m").count)})".html_safe %>
 
 <div id="timeline" class="row">
 	<div class="col-sm-5">
