--- a/app/views/layouts/schedules.html.erb
+++ b/app/views/layouts/schedules.html.erb
@@ -42,7 +42,7 @@
 	
 	</div>
 
-	<%= render partial: "modal_browser" if current_user.senior? %>
+	<%= render partial: "modal_browser" if current_user.staff? %>
 </body>
 
 </html>
