--- a/app/views/application/_menu_items.html.erb
+++ b/app/views/application/_menu_items.html.erb
@@ -28,7 +28,7 @@
 
 <%= menu_group do %>
 	<%= menu_link 'Hands', hands_path, icon: 'people-fill', condition: Settings.hands_allow %>
-<% end %>
+<% end if Settings.hands_allow %>
 	
 <%= menu_group current_schedule.name do %>
 	<%= menu_link 'Overview', overview_path, icon: 'columns' %>
