--- a/app/views/overviews/_overview_table.html.erb
+++ b/app/views/overviews/_overview_table.html.erb
@@ -26,7 +26,7 @@
 				<td style="padding-left:1em; padding-right:1em;"><strong><%= name.humanize %></strong></td>
 
 				<% psets.each do |name| %>
-				<td><%= grade_button(user, @grouped_psets[name][0], subs, false)%></td>
+				<td><%= grade_button(user, @grouped_psets[name][0], subs, true)%></td>
 				<% end %>
 
 			<% end %>
