css tweaks for colors and boxes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,9 +12,11 @@
 
 $theme-colors: (
   "primary": #0074d9,
+  "primary-dark": adjust-color(#0074d9, $lightness: -25%),
   "secondary": #4091d9,
   "danger": #ff4136,
-  "light": #fffdfc
+  "light": #fffdfc,
+  "darker-light": #f1efef
 );
 
 $color1: #595959;
