--- a/app/views/home/submissions.html.erb
+++ b/app/views/home/submissions.html.erb
@@ -1,17 +1,17 @@
 <% if @overview_config.present? %>
 
-<div id="timeline" class="row flex-xl-row-reverse">
-	<div class="col-12 col-xl-6 px-0 px-md-3">
+<div id="timeline" class="row flex-xl-row-reverse mx-n3 mx-lg-n4">
+	<div class="col-12 col-xl-6 px-3 px-lg-4 mt-lg-3">
 		<%= render partial: "grades_overview" %>
 	</div>
-	<div class="col-xl-6 px-0 px-md-3">
+	<div class="col-xl-6 px-1 px-lg-4">
 		<%= render partial: "items/item", collection: @items %>
 	</div>
 </div>
 
 <% else %>
 
-<div id="timeline" class="row flex-xl-row-reverse">
+<div id="timeline" class="row flex-xl-row-reverse mx-n3 mx-lg-n4">
 	<div class="col mx-0 mx-md-3">
 		<%= render partial: "items/item", collection: @items %>
 	</div>
