--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="timeline-item">
 	<div class="card-body">
 		<%= render partial: "items/#{item.class.to_s.downcase}", object: item %>
 	</div>
