basic ipynb support

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,6 +35,7 @@ $background-color: #fffdfc;
 @import "includes/elements";
 @import "includes/timeline";
 @import "includes/modal";
+@import "includes/grading";
 
 @import "includes/theme";
 @import "includes/fonts";
