--- a/app/views/grading/_file_panels.html.erb
+++ b/app/views/grading/_file_panels.html.erb
@@ -5,19 +5,11 @@
 <% end %>
 <% @files.each do |filename, contents| %>
 <div class="tab-pane <%= (first = false) || 'show active' if first %>" id="file-<%= filename.parameterize %>" role="tabpanel" aria-labelledby="home-tab">
-	<% if filename[-4,4] == "Form" %>
-	<%= format_form_contents(contents) %>
-	<% else %>
-	<%= link_to 'd', grading_download_path(grading_submit_id: @submit.id, filename: filename), remote: false, class: 'float-right' %>
-	<% filetype = CodeRay::FileType.fetch(filename, :text) %>
-	<% if filetype == :text %>
-	<%= simple_format(contents.encode("UTF-8", undef: :replace, replace: '?')) %>
-	<% else %>
-	<%= CodeRay.scan(contents, filetype).div(:line_numbers => :inline).html_safe %>
-	<% end %>
-	<% end %>
+	<%= present_file_contents(filename, contents) %>
 </div>
 <% end if @files.present? %>
 <% if @submit.has_auto_feedback? %>
-<div class="tab-pane <%= (first = false) || 'show active' if first %>" id="file-check" role="tabpanel" aria-labelledby="home-tab"><code><pre><%= @submit.formatted_auto_feedback %></code></pre></div>
+<div class="tab-pane <%= (first = false) || 'show active' if first %>" id="file-check" role="tabpanel" aria-labelledby="home-tab">
+	<code><pre><%= @submit.formatted_auto_feedback %></code></pre>
+</div>
 <% end %>
