--- a/app/views/submits/_grade.erb
+++ b/app/views/submits/_grade.erb
@@ -9,34 +9,39 @@
 
 <div class="form-group">
 	<label for="grade_comments" class="control-label">Feedback</label>
-	<%= @grade.comments && simple_markdown(@grade.comments) || '<p>(none)</p>'.html_safe %>
+	<div class="border rounded p-2">
+	<%= @grade.comments.present? && simple_markdown(@grade.comments) || '<p>(none)</p>'.html_safe %>
+	</div>
 </div>
 
 <div class="form-group">
 	<label for="" class="control-label">Internal notes</label>
+	<div class="border rounded p-2">
 	<%= @grade.notes.present? && simple_markdown(@grade.notes) || '<p>(none)</p>'.html_safe %>
+	</div>
 </div>
 
 <div id="grade-boxes" class="d-flex flex-wrap">
 	<% if @submit.pset.config && @submit.pset.config['subgrades'] %>
 	<% @submit.pset.config['subgrades'].each do |subgrade_name, subgrade_type| %>
-	<% if subgrade_type == 'integer' || subgrade_type == 'float' %>
-	<div class="form-group flex-fill">
-		<label for="input_<%= subgrade_name %>" class="control-label ml-1 mb-0"><%= subgrade_name.capitalize %><% if @submit.automatic_scores[subgrade_name] %>(<%= @submit.automatic_scores[subgrade_name] %>)<% end %></label>
-		<input type="text" class="form-control form-control-sm" id="input_<%= subgrade_name %>" disabled name="grade[subgrades[<%= subgrade_name %>]]" placeholder="" value="<%= @grade.subgrades[subgrade_name] if @grade.subgrades %>">
-	</div>
-	<% elsif subgrade_type == 'boolean' %>
-	<div class="form-group">
-		<div class="checkbox">
-			<label>
-				<%= check_box_tag "grade[subgrades[#{subgrade_name}]]", -1, @grade.subgrades && @grade.subgrades[subgrade_name] && !@grade.subgrades[subgrade_name].zero?, disabled: true %> <%= subgrade_name.humanize %>
-			</label>
+		<% if subgrade_type == 'integer' || subgrade_type == 'float' %>
+		<div class="form-group flex-fill">
+			<label for="input_<%= subgrade_name %>" class="control-label"><%= subgrade_name.capitalize %><% if @submit.automatic_scores[subgrade_name] %>(<%= @submit.automatic_scores[subgrade_name] %>)<% end %></label>
+			<input type="text" class="form-control form-control-sm" id="input_<%= subgrade_name %>" disabled name="grade[subgrades[<%= subgrade_name %>]]" placeholder="" value="<%= @grade.subgrades[subgrade_name] if @grade.subgrades %>">
 		</div>
-	</div>
-	<% end %>
+		<% elsif subgrade_type == 'boolean' %>
+		<div class="form-group">
+			<div class="checkbox">
+				<label>
+					<%= check_box_tag "grade[subgrades[#{subgrade_name}]]", -1, @grade.subgrades && @grade.subgrades[subgrade_name] && !@grade.subgrades[subgrade_name].zero?, disabled: true %> <%= subgrade_name.humanize %>
+				</label>
+			</div>
+		</div>
+		<% end %>
 	<% end %>
 	<% end %>
 </div>
+
 
 <% if current_user.admin? || not(@submit.pset.config && @submit.pset.config['subgrades'] && @submit.pset.config['calculation']) %>
 <div class="form-group">
@@ -49,8 +54,11 @@
 </div>
 <% end %>
 
-<% if current_user.admin? || current_user.senior? && !@grade.published? %>
-<div class="form-group d-flex mt-sauto mb-0 flex-row-reverse">
-	<%= link_to "Re-open", grade_path(id: @grade.id, grade: { status: :unfinished }), method: :put, data: { confirm: "Sure?" }, class: 'btn btn-secondary' %>
+<% if current_user.senior? %>
+<div class="form-group d-flex mb-0 justify-content-end">
+	<%= link_to "Reject", reject_grade_path(id: @grade.id), method: :patch, data: { confirm: "Sure to assign 0 grade and publish?" }, class: 'btn btn-secondary ml-2' %>
+	<% if current_user.admin? || current_user.senior? && !@grade.published? %>
+		<%= link_to "Re-open", reopen_grade_path(id: @grade.id), method: :patch, data: { confirm: "Sure to re-open for editing?" }, class: 'btn btn-secondary ml-2' %>
+	<% end %>
 </div>
 <% end %>
